if(NOT USE_CWR_SYSTEMC)
	add_subdirectory(ace-axi)
	add_subdirectory(axi-axi)
    add_subdirectory(axi4_tlm-pin-tlm)
    add_subdirectory(axi4lite_tlm-pin-tlm)
	add_subdirectory(ahb_bfm)
	add_subdirectory(simple_system)
	if(ENABLE_SCV AND SCV_FOUND)
		add_subdirectory(transaction_recording)
	endif()
    add_subdirectory(scc-tlm_target_bfs)
	add_subdirectory(cci_mem_example)
endif()

